--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
 	"dependencies": {
 		"async": "^2.6.1",
 		"aws-sdk": "2.713.0",
+		"body-parser": "^1.19.0",
 		"chi-squared-test": "^1.1.0",
 		"clone": "^2.1.2",
 		"csvtojson": "^2.0.8",
-		"express": "^4.16.3",
+		"express": "^4.17.1",
 		"http": "0.0.0",
 		"mysql": "^2.16.0",
 		"nodemailer": "^4.6.8",
