--- a/Server/db_config.json
+++ b/Server/db_config.json
@@ -1,3 +1,3 @@
-{ 
-    "DATABASE_URL": "postgresql://postgres@localhost:5433/contagion"
+{
+	"DATABASE_URL": "postgresql://postgres:myPassword@contagiongame.xyz:5432/contagion"
 }
